# Gempyre-Python

./: .gitignore  CMakeLists.txt  README.md  build.sh  build_linux.sh  build_msvc.bat  build_osx.sh  build_osx_debug.sh  collect_names.py  exceptions.txt  gempyre-py-v1.3.6f-Windows.tar.gz.3  gempyre_python.cpp  local_run.sh  mingw_build.bat  msvc_build.bat  publish.sh  pyproject.toml  requirements.txt  setup copy.py  setup.py  telex_python.cpp
.github/workflows/: main.yml  scikit-build.yml
Gempyre_utils/: resource.py
Telex_utils/: resource.py
client/: pyclient.py
deprecated/: bin_setup.py  publish.sh
examples/balls/: balls.py
examples/swarm/: swarm.py
src/: gempyre_python.cpp
src/Gempyre/: gempyre_python.cpp
test/: dialog_test.py  python_test_1.html  python_test_2.html  telex_test.py  telex_test2.py
test/balls/: balls.py
test/balls/assets/: balls.html
test/swarm/: swarm.py
